<resources>
    <string name="app_name">Tarkie</string>
    <string name="authorization_code">Authorization Code</string>
    <string name="authorize">Authorize</string>
    <string name="loading">Loading...</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="menu">Menu</string>
    <string name="logout_title">Confirm Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cannot_logout_title">Unable to Logout</string>
    <string name="cannot_logout_message">Sorry you cannot log-out yet. Please end your day first to proceed.</string>
    <string name="time_in">Time-in</string>
    <string name="time_out">Time-out</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="stores">Stores</string>
    <string name="gps_search_title">No GPS Signal</string>
    <string name="gps_search_message">Searching for GPS Signal. Please try going outside.</string>
    <string name="permission_title">Permissions Required</string>
    <string name="permission_message">Please enable the required permissions to continue.</string>
    <string name="update_master_file_title">Update Master File</string>
    <string name="update_master_file_message">Do you want to download the latest master file?</string>
    <string name="no_internet_message">Please connect to the internet.</string>
    <string name="gps_title">Location Services</string>
    <string name="gps_message">Please enable GPS satellites and Google\'s location service to continue.</string>
    <string name="mock_title">Mock Location</string>
    <string name="mock_message">Your mock location is turned on. Please turn it off first to continue using Tarkie.</string>
    <string name="gps_acquired_title">GPS Acquired</string>
    <string name="gps_acquired_message">GPS has been acquired, do you want to use this coordinates?</string>
    <string name="no_gps_signal_title">No GPS Signal</string>
    <string name="no_gps_signal_message">Unfortunately, your device is still unable to get GPS signal.</string>
    <string name="select_store_caps">SELECT STORE</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok_caps">OK</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="select_schedule_caps">SELECT SCHEDULE</string>
    <string name="camera_error_title">Camera Failed</string>
    <string name="camera_error_message">Unable to load camera, please try to restart your device and try again.</string>
    <string name="camera">Camera</string>
    <string name="photos_taken">Photos Taken</string>
    <string name="retake">Retake</string>
    <string name="take_photo">Take Photo</string>
    <string name="use_photo">Use Photo</string>
    <string name="summary">Summary</string>
    <string name="no_in_caps">NO IN</string>
    <string name="no_out_caps">NO OUT</string>
    <string name="zero_h">0h</string>
    <string name="total_work_hrs">Total Work Hours</string>
    <string name="total_break">Total Break</string>
    <string name="total_net_work_hrs">Total Net Work Hours</string>
    <string name="info_testament">I hereby declare this information to be true and correct.</string>
    <string name="add_signature">Add Signature</string>
    <string name="clear">Clear</string>
    <string name="affix_signature">Please affix your signature below</string>
    <string name="tab_home">Home</string>
    <string name="tab_visit">Visit</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="time_placeholder">00:00</string>
    <string name="day_placeholder">Monday</string>
    <string name="date_placeholder">Jan 1, 2017</string>
    <string name="breaks_caps">BREAKS</string>
    <string name="no_break">You don\'t have available breaks.</string>
    <string name="done">Done</string>
    <string name="finish_press_done">To finish, press \"Done\".</string>
    <string name="overtime_form">Overtime Form</string>
    <string name="date_colon">Date:</string>
    <string name="schedule_colon">Schedule:</string>
    <string name="time_in_colon">Time-in:</string>
    <string name="time_out_colon">Time-out:</string>
    <string name="total_hrs_colon">Total Hours:</string>
    <string name="hrs_eligible_ot_colon">Hours Eligible for OT:</string>
    <string name="reasons_colon">Reasons:</string>
    <string name="remarks_colon">Remarks:</string>
    <string name="ot_remarks_hint">Please input remarks.</string>
    <string name="ot_reason_required">Please choose reasons.</string>
    <string name="currently_syncing_title">Sync Data</string>
    <string name="currently_syncing_message">Data is currentyle synced in the background.</string>
    <string name="no_data_to_sync_message">No data to be synced.</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="new_visit">New Visit</string>
    <string name="visit">Visit</string>
    <string name="address">Address</string>
    <string name="forms">Forms</string>
    <string name="add_forms">Add Forms</string>
    <string name="photos">Photos</string>
    <string name="notes">Notes</string>
    <string name="notes_hint">Tap to add notes…</string>
    <string name="currently_check_in_message">You are currently checked-in at $title. Please check-out first to continue.</string>
    <string name="currently_check_in_title">Currently Checked-in</string>
    <string name="unfilled_up_visit_title">Unfilled Details</string>
    <string name="unfilled_up_visit_message">Please complete the details of your visit first and save.</string>
    <string name="checking_out_message">You are checking-out at</string>
    <string name="save_changes_title">Save Changes</string>
    <string name="save_changes_message">Do you want to save changes?</string>
    <string name="required_notes_title">Notes Required</string>
    <string name="required_notes_message">Please input notes.</string>
    <string name="active">Active</string>
    <string name="add_visit">Add Visit</string>
</resources>
