<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:codePan="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlHeaderSummary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:background="@color/theme_pri">

        <FrameLayout
            android:id="@+id/flBackStores"
            android:layout_width="@dimen/header"
            android:layout_height="@dimen/header">

            <ImageView
                android:layout_width="@dimen/dp18"
                android:layout_height="@dimen/dp18"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnBackSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"/>

        </FrameLayout>

        <com.codepan.widget.CodePanLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textSize="@dimen/dp18"
            codePan:typeface="@string/proxima_nova_light"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/svSummary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llFooterSummary"
        android:layout_below="@+id/rlHeaderSummary"
        android:scrollbarSize="@dimen/dp3"
        android:scrollbarThumbVertical="@color/black_trans_forty">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTimeInTitleSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_in"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTimeInSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/no_in_caps"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTimeOutTitleSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_out"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTimeOutSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/no_out_caps"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_work_hrs"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTotalWorkHrsSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/zero_h"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_break"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvTotalBreakSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/zero_h"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <com.codepan.widget.CodePanLabel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_net_work_hrs"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

                <com.codepan.widget.CodePanLabel
                    android:id="@+id/tvNetWorkHrsSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/zero_h"
                    android:textColor="@color/gray_pri"
                    android:textSize="@dimen/dp17"
                    codePan:typeface="@string/proxima_nova_light"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/divider"/>

            <com.codepan.widget.CodePanLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp15"
                android:text="@string/info_testament"
                android:textSize="@dimen/dp15"
                codePan:typeface="@string/proxima_nova_light"/>

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnAddSignature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:background="@drawable/state_rect_white_rad_three_str_theme_sec"
                android:padding="@dimen/dp10"
                android:text="@string/add_signature"
                android:textColor="@color/gray_pri"
                android:textSize="@dimen/dp17"
                codePan:typeface="@string/proxima_nova_light"/>

            <FrameLayout
                android:id="@+id/flSignatureSummary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp120"
                android:layout_marginEnd="@dimen/dp25"
                android:layout_marginLeft="@dimen/dp25"
                android:layout_marginRight="@dimen/dp25"
                android:layout_marginStart="@dimen/dp25"
                android:background="@drawable/bg_rect_white_rad_five_str_gray_qua"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivSignatureSummary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp5"
                    android:scaleType="centerInside"/>

                <FrameLayout
                    android:id="@+id/flEditSummary"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="@dimen/dp3">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"/>

                    <com.codepan.widget.CodePanButton
                        android:id="@+id/btnEditSummary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/state_oval_trans_dark"/>

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llFooterSummary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_qui">

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnCancelSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/dp17"
                codePan:typeface="@string/proxima_nova_light"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/theme_sec">

            <com.codepan.widget.CodePanButton
                android:id="@+id/btnTimeOutSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/state_rect_trans_dark"
                android:text="@string/time_out"
                android:textColor="@color/white"
                android:textSize="@dimen/dp17"
                codePan:typeface="@string/proxima_nova_light"/>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>